--- a/TouristsManagementSystem/src/main/resources/application.yml
+++ b/TouristsManagementSystem/src/main/resources/application.yml
@@ -1,1 +1,17 @@
-
+debug: true
+spring:
+  datasource:
+     driver-class-name: oracle.jdbc.OracleDriver
+     url: jdbc:oracle:thin:@localhost:1521:xe
+     username: sys as sysdba
+     password: admin@123
+  jpa:
+      show-sql: true
+      hibernate:
+        ddl-auto: update
+  mvc:
+    view:
+      prefix: /WEB-INF/jsp/
+      suffix: .jsp
+server:
+  port: 8383      
