--- a/TouristsManagementSystem/src/main/resources/application.yml
+++ b/TouristsManagementSystem/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
         ddl-auto: update
   mvc:
     view:
-      prefix: /WEB-INF/jsp/
+      prefix: /jsp/
       suffix: .jsp
 server:
   port: 8383      
